<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context="com.toddburgessmedia.torontoandroiddemo.GreetingActivity">

    <TextView
        style="@style/TextSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What Android Library do you love?" />

    <EditText
        style="@style/TextSize"
        android:id="@+id/greeting_libname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        style="@style/TextSize"
        android:id="@+id/greeting_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:onClick="submitLibrary"
        />

</LinearLayout>
