<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context="com.toddburgessmedia.torontoandroiddemo.LoveActivity">

    <TextView
        style="@style/TextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/love_greeting"
        />

    <Button
        style="@style/TextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/love_bye"
        android:text="Great"
        android:onClick="greatClick"
        />

</LinearLayout>
